--- a/apps/templates/includes/footer.html
+++ b/apps/templates/includes/footer.html
@@ -5,8 +5,8 @@
           <ul class="nav">
             <li class="nav-item">
               <a target="_blank" rel="noopener noreferrer"
-                 href="https://appseed.us/admin-dashboards/flask-dashboard-black" class="nav-link">
-                Flask Dashboard Black
+                 href="/" class="nav-link">
+                Blue Zoo
               </a>
             </li>
           </ul>
