--- a/apps/templates/includes/sidebar-rtl.html
+++ b/apps/templates/includes/sidebar-rtl.html
@@ -4,12 +4,12 @@
       <div class="sidebar-wrapper">
         <div class="logo">
           <a target="_blank" rel="sponsored noopener noreferrer" 
-             href="https://appseed.us/admin-dashboards/flask-dashboard-black" class="simple-text logo-mini">
-            PI
+             href="/" class="simple-text logo-mini">
+            Eve
           </a>
           <a target="_blank" rel="sponsored noopener noreferrer" 
-             href="https://appseed.us/admin-dashboards/flask-dashboard-black" class="simple-text logo-normal">
-            Flask Black
+             href="/" class="simple-text logo-normal">
+            Blue Zoo
           </a>
         </div>
 
