--- a/apps/templates/home/login.html
+++ b/apps/templates/home/login.html
@@ -11,13 +11,13 @@
           <div class="col-md-8">
             <div class="card">
 
-              <form role="form" method="post" action="">
+              {% comment %} <form role="form" method="post" action=""> {% endcomment %}
               
                 <div class="card-header">
                   <h5 class="title">Login</h5>
 
                   <h6 class="card-category">
-                      Add your credentials
+                      Login with your Eve Online credentials
                   </h6>
                 </div>
 
@@ -27,13 +27,14 @@
 
                       <div class="col-md-3 px-md-1">
                         <div class="form-group">
-                          <label>Username</label>
-                          <input class="form-control" id="username_login" name="username" required="" type="text" value="">
+                          <a href=/sso/login><img border=0 src=https://web.ccpgamescdn.com/eveonlineassets/developers/eve-sso-login-black-small.png></a>
+                          {% comment %} <label>Username</label>
+                          <input class="form-control" id="username_login" name="username" required="" type="text" value=""> {% endcomment %}
                         </div>
                       </div>
 
                     </div>
-                    <div class="row">
+                    {% comment %} <div class="row">
 
                       <div class="col-md-3 px-md-1">
                         <div class="form-group">
@@ -42,16 +43,16 @@
                         </div>
                       </div>
 
-                    </div>
+                    </div> {% endcomment %}
                     
                 </div>
-                <div class="card-footer">
+                {% comment %} <div class="card-footer">
                   <button type="submit" name="login" class="btn btn-fill btn-primary">Login</button>
                   &nbsp; &nbsp;
                   Don't have an account? <a href="/register.html" class="text-primary">Create</a>
-                </div>
+                </div> {% endcomment %}
 
-              </form>
+              {% comment %} </form> {% endcomment %}
 
             </div>
           </div>
