--- a/apps/templates/home/page-user.html
+++ b/apps/templates/home/page-user.html
@@ -16,22 +16,19 @@
       <div class="card-body">
         <form>
           <div class="row">
+            <div class="col-md-3 px-md-1">
+              <div class="form-group">
+                <label>Username</label>
+                <input type="text" class="form-control" disabled="" value="{{ current_user.character_name }}">
+              </div>
+            </div>
             <div class="col-md-5 pr-md-1">
               <div class="form-group">
                 <label>CharacterID (disabled)</label>
                 <input type="text" class="form-control" disabled="" value="{{ current_user.character_id }}">
               </div>
             </div>
-            <div class="col-md-3 px-md-1">
-              <div class="form-group">
-                <label>Username</label>
-                <input type="text" class="form-control" value="{{ current_user.character_name }}">
-              </div>
-            </div>
         </form>
-      </div>
-      <div class="card-footer">
-        <button type="submit" class="btn btn-fill btn-primary">Save</button>
       </div>
     </div>
   </div>
