--- a/apps/templates/home/ui-maps.html
+++ b/apps/templates/home/ui-maps.html
@@ -11,10 +11,10 @@
   <div class="col-md-12">
     <div class="card card-plain">
       <div class="card-header">
-        Google Maps
+        Dotlan Maps
       </div>
       <div class="card-body">
-        <div id="map" class="map"></div>
+        <img src=/static/svg/Cobalt_Edge.svg>
       </div>
     </div>
   </div>
