Add Character on User profile is able to identify a different user

--- a/apps/templates/home/page-user.html
+++ b/apps/templates/home/page-user.html
@@ -28,6 +28,14 @@
                 <input type="text" class="form-control" disabled="" value="{{ current_user.character_id }}">
               </div>
             </div>
+            <div class="col-md-5 pr-md-1">
+              <div class="form-group">
+                <label>Add Character</label>
+                <a href=/sso/login>AddChar</a>
+              </div>
+            </div>
+
+            
         </form>
       </div>
     </div>
