--- a/apps/templates/home/ui-blueprints.html
+++ b/apps/templates/home/ui-blueprints.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Mining Ledger {% endblock %} 
+{% block title %} User Blueprints {% endblock %} 
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -11,14 +11,14 @@
   <div class="col-md-12">
     <div class="card card-plain">
       <div class="card-header">
-        Mining Ledger
+        User Blueprints
       </div>
       <div class="card-body">
         <table id="ledger" class="display" style="width:100%">
         {% for row in data %}
           <tr>
-            <td>{{ row[0] }}</td>
-            <td>{{ row[1] }}</td>
+            <td>{{ row['type_id'] }}</td>
+            <td>{{ row['itemName'] }}</td>
             <td>{{ row[2] }}</td>
             <td>{{ row[3] }}</td>
             <td>{{ row[4] }}</td>
