--- a/apps/templates/home/ui-blueprints.html
+++ b/apps/templates/home/ui-blueprints.html
@@ -19,7 +19,7 @@
           <tr>
             <td>{{ row['type_id'] }}</td>
             <td>{{ row['itemName'] }}</td>
-            <td>{{ row[2] }}</td>
+            <td>{{ row['characterName'] }}</td>
             <td>{{ row[3] }}</td>
             <td>{{ row[4] }}</td>
             <td>{{ row[5] }}</td>
