--- a/apps/templates/home/ui-blueprints.html
+++ b/apps/templates/home/ui-blueprints.html
@@ -15,14 +15,22 @@
       </div>
       <div class="card-body">
         <table id="ledger" class="display" style="width:100%">
+          <tr>
+            <th>Blueprint</th>
+            <th>Character</th>
+            <th>Location</th>
+            <th>ME</th>
+            <th>TE</th>
+            <th>Runs</th>
+          </tr>
         {% for row in data %}
           <tr>
-            <td>{{ row['type_id'] }}</td>
             <td>{{ row['itemName'] }}</td>
             <td>{{ row['characterName'] }}</td>
-            <td>{{ row[3] }}</td>
-            <td>{{ row[4] }}</td>
-            <td>{{ row[5] }}</td>
+            <td>{{ row['location_flag'] }}</td>
+            <td>{{ row['material_efficiency'] }}</td>
+            <td>{{ row['time_efficiency'] }}</td>
+            <td>{{ row['runs'] }}</td>
           </tr>
         {% endfor %}
         </table>
