--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -24,7 +24,7 @@
             <ul class="navbar-nav ml-auto">
             {% if current_user.is_authenticated %}
 
-              <li class="search-bar input-group">
+              <!-- <li class="search-bar input-group">
                 <button class="btn btn-link" id="search-button" data-toggle="modal" data-target="#searchModal"><i class="tim-icons icon-zoom-split" ></i>
                   <span class="d-lg-none d-md-block">Search</span>
                 </button>
@@ -44,11 +44,14 @@
                   <li class="nav-link"><a href="javascript:void(0)" class="nav-item dropdown-item">Another notification</a></li>
                   <li class="nav-link"><a href="javascript:void(0)" class="nav-item dropdown-item">Another one</a></li>
                 </ul>
-              </li>
+              </li> -->
               <li class="dropdown nav-item">
                 <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
                   <div class="photo">
-                    <img src="/static/assets/img/anime3.png" alt="Profile Photo">
+                    <!-- <img src="/static/assets/img/anime3.png" alt="Profile Photo"> -->
+                    <img src="https://images.evetech.net/characters/{{ current_user.character_id }}/portrait?tenant=tranquility&size=64" alt="Profile Photo">
+
+                    
                   </div>
                   <b class="caret d-none d-lg-block d-xl-block"></b>
                   <p class="d-lg-none">
