--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -14,14 +14,28 @@
           <div class="card-header ">
             <div class="row">
               <div class="col-sm-6 text-left">
-                <h2 class="card-title">Performance</h2>
+                <h2 class="card-title">Dashboard</h2>
               </div>
             </div>
           </div>
           <div class="card-body">
-            <div class="chart-area">
+            
               Your wallet is currently full of <strong>{{ "$%.2f"|format(wallet.data) }}</strong> ISKs
-            </div>
+            
+            <div class="row">
+              {% for character in characters %}
+                <div class="font-icon-list col-lg-2 col-md-3 col-sm-4 col-xs-6 col-xs-6">
+                  <div class="font-icon-detail">
+                    <img src="https://images.evetech.net/characters/{{ character[1] }}/portrait?tenant=tranquility&size=64" alt="Profile Photo">
+                    <br>
+                    <div class="text-center">
+                      <h2 class="card-title">{{ character[0] }}</h2>
+                    </div>
+                    SP:<strong>{{ "{:,}".format(character[2]) }}</strong>
+                  </div>
+                </div>
+              {% endfor %}              
+            </div>            
           </div>
         </div>
       </div>
