--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -26,7 +26,7 @@
               {% if characters is defined and characters|length > 0 %}
 
                 {% for character in characters %}
-                  <div class="font-icon-list col-lg-2 col-md-3 col-sm-4 col-xs-6 col-xs-6">
+                  <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 col-xs-6">
                     <div class="font-icon-detail">
                       <img src="https://images.evetech.net/characters/{{ character[1] }}/portrait?tenant=tranquility&size=64" alt="Profile Photo">
                       <br>
