--- a/apps/templates/home/page-character.html
+++ b/apps/templates/home/page-character.html
@@ -12,7 +12,7 @@
       <div class="col-md-8">
         <div class="card">
           <div class="card-header">
-            <h5 class="title">Edit Profile</h5>
+            <h5 class="title">Character Profile</h5>
           </div>
 
           <div class="card-body">
@@ -20,19 +20,18 @@
 
             <h2 class="h5 mb-4">Alerts & Notifications</h2>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item d-flex align-items-center justify-content-between px-0 border-bottom">
-                    <div>
-                        <h3 class="h6 mb-1">Company News</h3>
-                        <p class="small pe-4">Get Rocket news, announcements, and product updates</p>
-                    </div>
-                    <div>
-                        <div class="form-check form-switch">
-                            <input class="form-check-input" type="checkbox" id="user-notification-1">
-                            <label class="form-check-label" for="user-notification-1"></label>
-                        </div>
-                    </div>
-                </li>
-
+                <li class="">
+                  <div>
+                      <h3 class="h6 mb-1">SP Farm Updates</h3>
+                      <p class="small pe-4">Get Notification when this character reaches over 5.5mSP</p>
+                  </div>
+                  <div>
+                      <div class="">
+                          <input class="" type="checkbox" id="user-notification-1">
+                          <label class="" for="user-notification-1"></label>
+                      </div>
+                  </div>
+              </li>
             </ul>            
           </div>
           <div class="card-footer">
