--- a/apps/templates/home/ui-miningledger.html
+++ b/apps/templates/home/ui-miningledger.html
@@ -13,6 +13,9 @@
       <div class="card-header">
         Mining Ledger
       </div>
+      <div class="text-right">
+        <small>Updates hourly</small>
+      </div>
       <div class="card-body">
         <table id="ledger" class="display" style="width:100%">
 
