--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -32,7 +32,7 @@
                       <img src="https://images.evetech.net/characters/{{ character[1] }}/portrait?tenant=tranquility&size=64" alt="Profile Photo">
                       <br>
                       <div class="text-center">
-                        <h2 class="card-title"><a href="{{ url_for('home_blueprint.page_character') }}?character_id={{character.character_id}}">{{ character[0] }}</a></h2>
+                        <h2 class="card-title"><a href="{{ url_for('home_blueprint.page_character_get') }}?character_id={{character.character_id}}">{{ character[0] }}</a></h2>
                       </div>
                       SP:<strong>{{ "{:,}".format(character[2]) }}</strong>
                     </div>
