disable user blueprints and add help text

--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -44,6 +44,7 @@
                 <div class="font-icon-detail">
                   <div class="text-center">
                     <h2 class="card-title">Select User Profile -> Add Chacter</h2>
+                    <small>Users display within 1 hour</small>
                   </div>
                 </div>
               </div>
