--- a/apps/templates/home/page-user.html
+++ b/apps/templates/home/page-user.html
@@ -26,7 +26,7 @@
                   <h5 class="card-title">Discord Linked</h5>
                 {% else %}
                   <h3 class="card-title">Discord Not Linked</h3>
-                  <h4 class="card-title"><a href="/discord/login">Link!</h4>
+                  <h4 class="card-title"><a href="/discord/login">Link!</a></h4>
                 {% endif %}
               </div>              
             </div>
