update character page

--- a/apps/templates/home/page-character.html
+++ b/apps/templates/home/page-character.html
@@ -37,8 +37,8 @@
                   <h3 class="h6 mb-1">Mining Ledger</h3>
                   <p class="small pe-4">Catalog Mining Ledger results for a single view across all characters.  
                       <input type="hidden" id="character_id" name="character_id" value="{{character.character_id}}">
-                      <input class="" type="checkbox" name="preferences" value="sp-farm-notification"
-                      {% if 'sp-farm-notification' in notifications.split(',') %} checked {% endif %}>
+                      <input class="" type="checkbox" name="preferences" value="mining-ledger_task"
+                      {% if 'mining-ledger-notification' in notifications.split(',') %} checked {% endif %}>
                       <label class="" for="user-notification-1"></label>
                     </p>
               </div>
@@ -48,8 +48,8 @@
                 <h3 class="h6 mb-1">Blueprints</h3>
                 <p class="small pe-4">Enable downloading your Blueprint list to view as one. 
                     <input type="hidden" id="character_id" name="character_id" value="{{character.character_id}}">
-                    <input class="" type="checkbox" name="preferences" value="sp-farm-notification"
-                    {% if 'sp-farm-notification' in notifications.split(',') %} checked {% endif %}>
+                    <input class="" type="checkbox" name="preferences" value="blueprint_task"
+                    {% if 'mining-ledger-notification' in notifications.split(',') %} checked {% endif %}>
                     <label class="" for="user-notification-1"></label>
                   </p>
             </div>
