enabled blue prints with sorting/searching

--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -34,12 +34,12 @@
               <p>Mining Ledger</p>
             </a>
           </li>
-          <!-- <li class="{% if 'blueprints' in segment %} active {% endif %}">
+          <li class="{% if 'blueprints' in segment %} active {% endif %}">
             <a href="/ui-blueprints.html">
               <i class="tim-icons icon-bell-55"></i>
               <p>User Blueprints</p>
             </a>
-          </li>           -->
+          </li>          
           <li class="{% if 'page-user' in segment %} active {% endif %}">
             <a href="/page-user.html">
               <i class="tim-icons icon-single-02"></i>
