--- a/apps/templates/home/ui-blueprints.html
+++ b/apps/templates/home/ui-blueprints.html
@@ -6,7 +6,15 @@
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}
-
+<div class="pagination">
+  {% if page > 1 %}
+  <a href="{{ url_for('home_blueprint.page_blueprints', page=page - 1) }}">&laquo; Previous</a>
+  {% endif %}
+  <span>Page {{ page }} of {{ total_pages }}</span>
+  {% if page < total_pages %}
+  <a href="{{ url_for('home_blueprint.page_blueprints', page=page + 1) }}">Next &raquo;</a>
+  {% endif %}
+</div>
 <div class="row">
   <div class="col-md-12">
     <div class="card card-plain">
@@ -15,24 +23,28 @@
       </div>
       <div class="card-body">
         <table id="ledger" class="display" style="width:100%">
-          <tr>
-            <th>Blueprint</th>
-            <th>Character</th>
-            <th>Location</th>
-            <th>ME</th>
-            <th>TE</th>
-            <th>Runs</th>
-          </tr>
-        {% for row in data %}
-          <tr>
-            <td>{{ row['itemName'] }}</td>
-            <td>{{ row['characterName'] }}</td>
-            <td>{{ row['location_flag'] }}</td>
-            <td>{{ row['material_efficiency'] }}</td>
-            <td>{{ row['time_efficiency'] }}</td>
-            <td>{{ row['runs'] }}</td>
-          </tr>
-        {% endfor %}
+          <thead>
+            <tr>
+              <th>Blueprint</th>
+              <th>Character</th>
+              <th>Location</th>
+              <th>ME</th>
+              <th>TE</th>
+              <th>Runs</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for row in data %}
+            <tr>
+              <td>{{ row.itemName }}</td>
+              <td>{{ row.characterName }}</td>
+              <td>{{ row.location_flag }}</td>
+              <td>{{ row.material_efficiency }}</td>
+              <td>{{ row.time_efficiency }}</td>
+              <td>{{ row.runs }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
         </table>
       </div>
     </div>
@@ -47,13 +59,14 @@
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.js"></script>
 <script type="text/javascript">
-  $(document).ready( function () {
-      $('table.display').DataTable( {
-         "pageLength": 15
-      });
-  } );
+  $(document).ready(function () {
+    $('#ledger').DataTable({
+      paging: true,       // Enable pagination
+      searching: true,    // Enable search/filter
+      ordering: true,     // Enable column sorting
+      pageLength: 100,     // Number of rows per page
+      lengthChange: false // Disable the ability to change rows per page
+    });
+  });
 </script>
-
-
-  
 {% endblock javascripts %}
