profile pic and readme updates

--- a/apps/templates/home/page-user.html
+++ b/apps/templates/home/page-user.html
@@ -17,7 +17,7 @@
           <div class="row">
             <div class="col-md-3 px-md-1">
               <div class="form-group">
-                <label>User: </label>
+                <img src="https://images.evetech.net/characters/{{ current_user.character_id }}/portrait?tenant=tranquility&size=256"><br>
                 <strong>{{ current_user.character_name }}</strong>
               </div>
               <div class="text-left">
