--- a/apps/templates/home/page-contracts.html
+++ b/apps/templates/home/page-contracts.html
@@ -10,16 +10,48 @@
   <div class="col-md-8">
     <div class="card">
       <div class="card-header">
-        <h5 class="title">Contract Stalker</h5>
+        <h4 class="title">Contract Stalker</h4>
       </div>
       <div class="card-body">
-        <form action="/submit" method="GET">
-          <input type="text" id="search" name="typeName" placeholder="Search items..." onkeyup="fetchItems()" autocomplete="off">
-          <input type="hidden" id="selectedItemID" name="typeID">
-          <ul id="results"></ul>
-          <br>
-          <button type="submit">Submit</button>
-      </form>
+        <h5>Select an Item to Track</h5>
+
+        <form action="{{ url_for('home_blueprint.display_contract_selection') }}" method="POST">
+            <input type="hidden" name="action" value="add">
+            <input type="text" id="search" name="typeName" placeholder="Search items..." onkeyup="fetchItems()" autocomplete="off">
+            <input type="hidden" id="selectedItemID" name="typeID">
+            <ul id="results"></ul>
+            <button type="submit">Track Item</button>
+        </form>
+    
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <ul>
+                    {% for category, message in messages %}
+                        <li class="{{ category }}">{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+        <br>
+    
+        <h5>Currently Tracked Items</h5>
+        <ul>
+            {% for item in tracked_items %}
+                <li>
+                    {{ item.typeName }}
+                    <form action="{{ url_for('home_blueprint.display_contract_selection') }}" method="POST" style="display:inline;">
+                        <input type="hidden" name="action" value="remove">
+                        <input type="hidden" name="typeID" value="{{ item.type_id }}">
+                        <button type="submit" style="border: none; background: none; cursor: pointer; color: red;">
+                            ❌
+                        </button>
+                    </form>
+                </li>
+            {% else %}
+                <li>No items being tracked.</li>
+            {% endfor %}
+        </ul>
+        
       </div>
     </div>
   </div>
