--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -20,7 +20,7 @@
           </div>
           <div class="card-body">
             
-              <!-- Your wallet is currently full of <strong>{{ "$%.2f"|format(wallet.data) }}</strong> ISKs -->
+              Your wallet is currently full of <strong>{{ "$%.2f"|format(wallet.data) }}</strong> ISKs
                Characters
             
             <div class="row">
