--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -39,7 +39,13 @@
               <i class="tim-icons icon-bell-55"></i>
               <p>User Blueprints</p>
             </a>
-          </li>          
+          </li>
+          <li class="{% if 'bp-finder' in segment %} active {% endif %}">
+            <a href="/page-bp-finder.html">
+              <i class="tim-icons icon-bell-55"></i>
+              <p>Blueprint Finder</p>
+            </a>
+          </li>                    
           <li class="{% if 'page-user' in segment %} active {% endif %}">
             <a href="/page-user.html">
               <i class="tim-icons icon-single-02"></i>
